--- a/RegisterLogin/.settings/org.eclipse.wst.common.component
+++ b/RegisterLogin/.settings/org.eclipse.wst.common.component
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="RegisterLogin">
-                
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
-        <property name="java-output-path" value="/RegisterLogin/build/classes"/>
-        <property name="context-root" value="RegisterLogin"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="RegisterLogin">
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp/WEB-INF/lib"/>
+                        
+        
+        <property name="java-output-path" value="/RegisterLogin/build/classes"/>
+                
+        <property name="context-root" value="RegisterLogin"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
